--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: 16
 
+      - name: Install Dependencies
+        run: npm install
+
       - name: Run Tests
         run: npm run coverage
 
